--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@babel/runtime": "7.9.2",
     "@deck.gl/core": "8.1.3",
+    "@deck.gl/extensions": "^8.7.8",
     "@deck.gl/geo-layers": "8.1.3",
     "@deck.gl/layers": "8.1.3",
     "@deck.gl/mesh-layers": "8.1.3",
     "@deck.gl/react": "8.1.3",
     "@loaders.gl/core": "2.1.2",
-    "@luma.gl/core": "^8.1.1",
+    "@luma.gl/core": "8.5.10",
     "@luma.gl/gltools": "8.1.1",
-    "@luma.gl/webgl": "^8.1.1",
+    "@luma.gl/webgl": "8.1.1",
     "deck.gl": "8.1.3",
+    "gl-matrix": "^3.0.0",
     "math.gl": "3.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
