--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "math.gl": "3.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-map-gl": "5.2.5"
+    "react-map-gl": "5.2.5",
+    "DataFilterExtension": "8.7.7"
   },
   "scripts": {
     "start": "react-scripts start",
